--- a/src/components/speakers/speakers.css
+++ b/src/components/speakers/speakers.css
@@ -23,7 +23,7 @@
 .header-text {
     font-size: 40px;
     font-weight: 400;
-    margin: 0;
+    margin: -10px 0 -10px 0;
     padding: 0;
 }
 
